--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>base de conhecimento</title>
+    <title>Base de conhecimento</title>
 </head>
 <body>
     <header>
-        <h1>Base de Conhecimento</h1>
+        <h1>Base de conhecimento</h1>
         <div>
             <input type="text" placeholder="Digite uma linguagem de programação">
-            <button onclick="iniciarBusca()">Buscar</button>
+            <button id="botao-busca" onclick="iniciarBusca()">Buscar</button>
         </div>
     </header>
 
     <main>
-        <section id="resultados">
-            <!-- Resultados da busca serão exibidos aqui -->
+        <section class="card-container">
+            <!-- <article class="card">
+                <h2>JavaScript</h2>
+                <p>1995</p>
+                <p>JavaScript é uma linguagem de programação</p>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">Saiba mais</a>
+            </article> -->
         </section>
     </main>
 
     <footer>
-        <ul>
-            <li><a href="https://youtu.be/SC4xMk98Pdc?si=Gd-51ev5AEAlsfr1">congulations</a></li>
+    <footer class="footer">
+        <ul class="footer-links">
             <li>
-                <a href="https://youtu.be/xpVfcZ0ZcFM?si=5Wpisv8gX_vyGVoZ">drak</a>
+                <a href="https://github.com/">GitHub</a>
+            </li>
+            <li>
+                <a href="https://www.alura.com.br/">Alura</a>
             </li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
